syntax = "proto3";

package proto.conversationMedia;

option go_package = "github.com/tel4vn/fins-microservices/gen/proto/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

message ConversationMedia {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string tenant_id = 4;
  string conversation_id = 5;
  string external_conversation_id = 6;
  string conversation_type = 7;
  string message_id = 8;
  string media_type = 9;
  string media_header = 10;
  string media_url = 11;
  int64 media_size = 12;
  google.protobuf.Timestamp send_timestamp = 13;
}

// get conversation medias
message GetConversationMediasRequest {
  string tenant_id = 1;
  string conversation_id = 2;
  string external_conversation_id = 3;
  string conversation_type = 4;
  string media_type = 5;
  string media_name = 6;
  string send_timestamp = 7;
  int32 limit = 8;
  int32 offset = 9;
}

message GetConversationMediasResponse {
  string code = 1;
  string message = 2;
  repeated ConversationMedia data = 3;
  int32 total = 4;
  int32 limit = 5;
  int32 offset = 6;
}

service ConversationMediaService {
  rpc GetConversationMedias(GetConversationMediasRequest) returns (GetConversationMediasResponse) {
    option (google.api.http) = {
      get : "/bss-chat/v1/conversation-media"
    };
  };
}